# flight-with-actions

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: pipeline.yml
src/: communicators.rs  data.rs  data_receiver.rs  discovery.rs  flight_computer.rs  forwarder.rs  forwarding.rs  handler.rs  lib.rs  logger.rs  main.rs  receiver.rs  state.rs  switchboard.rs
src/communicators/: board_communicator.rs  command_parser.rs  csc.rs  destinations.rs  server_communicator.rs
src/flight_computer/: flight_computer.rs  mod.rs
src/flight_computer/state/: connect_to_controller.rs  mod.rs  read_local_configs.rs  software_system_check.rs  software_system_check_err.rs  spawn_cmd_receiver.rs
src/sequences/: func.rs  mod.rs  sensor.rs  unit.rs  valve.rs
src/state/: flight_computer.rs  machine.rs  seqc.rs
src/switchboard/: commander.rs  defibrillator.rs  lifetime.rs  mod.rs  switchboard.rs  worker.rs
tests/: device_discovery_test.rs  state_test.rs
