[package]
name = "fc"
version = "0.1.0"
authors = ["debian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
prusst = "1.0"

udp-socket = "0.1.5"
circular = "0.3.0"
quick-protobuf = "0.8.0"
fs-protobuf-rust = { path = "fs-protobuf-rust" }
lazy_static = "1.4.0"