[package]
name = "fc"
version = "0.1.0"
authors = ["debian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
prusst = "1.0"

udp-socket = "0.1.5"
tcp-stream = "0.24.4"
quick-protobuf = "0.8.0"
tokio = { version = "1.23" }
dns-lookup = "2.0.2"
fs-protobuf-rust = { git = "ssh://git@github-research.gatech.edu/YJSP/fs-protobuf-rust" }